<resources>
    <string name="app_name">PC1DAM18100066</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_rendimiento">Rendimiento</string>
    <string name="valtitlerendimiento">El rendimiento es:</string>
    <string name="valK">Kilometros recorridos</string>
    <string name="valM">Minutos jugados</string>
    <string name="valbtcal">Calcular</string>
    <string name="valtitlerend">RENDIMIENTO</string>
    <string name="menu_equipo">Equipo</string>
    <string name="valtitlEq">EQUIPOS</string>
</resources>